# rsocx

./: .travis.yml  Cargo.toml  LICENSE  README.MD  README.md  build.sln  makefile  test
src/: Tunnel.cpp  Tunnel.h  main.rs  socks.rs  stdafx.cpp  stdafx.h  utils.rs  xsocks.cpp  xsocks.vcxproj  xsocks.vcxproj.filters
src/common/: CommonDefines.h  Socket.h  public.h
src/socks/: SocksMgr.cpp  SocksMgr.h  SocksParser.cpp  SocksParser.h
src/th3rd/: dns.cpp  dns.h
src/thread/: ThreadArray.cpp  ThreadArray.h
src/utils/: AutoCleanup.h  ods.cpp  ods.h  tstring.cpp  tstring.h
