[package]
name = "rsocx"
version = "0.2.0"
authors = ["b23r0 <b23r0@foxmail.com>"]
edition = "2021"
description = "A high performence Socks5 proxy server with bind/reverse support implementation by Rust."
repository = "https://github.com/b23r0/rsocx"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "2.1.0"
log = "0.4.14"
tokio = { version = "1", features = ["full"] }
getopts = "0.2"
net2 = "0.2"